--- a/css/options_chrome.css
+++ b/css/options_chrome.css
@@ -220,6 +220,12 @@ main > section .section-content ul li {
   padding-bottom: 2px;
   padding-top: 2px;
 }
+main > section #please-apply {
+  color: darkorange;
+  display: none;
+  text-align: right;
+  margin-right: 2em;
+}
 
 footer > .box {
   display: flex;
