--- a/css/text_colors_pcboard.css
+++ b/css/text_colors_pcboard.css
@@ -29,7 +29,7 @@ i {
   font-style: normal;
 }
 
-/* PCBoard rendering is indended for IBM 8px fonts */
+/* PCBoard rendering is indented for IBM 8px fonts */
 
 pre {
   white-space: pre-wrap;
