--- a/fonts/material/iconfont/material-icons.css
+++ b/fonts/material/iconfont/material-icons.css
@@ -6,7 +6,7 @@
     url(MaterialIcons-Regular.woff2) format("woff2"),
     url(MaterialIcons-Regular.woff) format("woff"),
     url(MaterialIcons-Regular.ttf) format("truetype");
-  font-display: swap;
+  font-display: auto;
 }
 
 .material-icons {
