--- a/ext/css/fonts_home.css
+++ b/ext/css/fonts_home.css
@@ -7,7 +7,7 @@
 @font-face {
   font-family: "topaza500";
   src: url("../fonts/Topaz_a500.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-topaza500 {
   font-family: topaza500;
@@ -17,7 +17,7 @@
 @font-face {
   font-family: "topazplusa500";
   src: url("../fonts/TopazPlus_a500.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-topazplusa500 {
   font-family: topazplusa500;
@@ -27,7 +27,7 @@
 @font-face {
   font-family: "topaza1200";
   src: url("../fonts/Topaz_a1200.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-topaza1200 {
   font-family: topaza1200;
@@ -37,7 +37,7 @@
 @font-face {
   font-family: "topazplusa1200";
   src: url("../fonts/TopazPlus_a1200.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-topazplusa1200 {
   font-family: topazplusa1200;
@@ -47,7 +47,7 @@
 @font-face {
   font-family: "p0tnoodle";
   src: url("../fonts/P0T-NOoDLE.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-p0tnoodle {
   font-family: p0tnoodle;
@@ -57,7 +57,7 @@
 @font-face {
   font-family: "microknight";
   src: url("../fonts/MicroKnight.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-microknight {
   font-family: microknight;
@@ -67,7 +67,7 @@
 @font-face {
   font-family: "microknightplus";
   src: url("../fonts/MicroKnightPlus.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-microknightplus {
   font-family: microknightplus;
@@ -77,7 +77,7 @@
 @font-face {
   font-family: "mosoul";
   src: url("../fonts/mOsOul.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-mosoul {
   font-family: mosoul;
@@ -88,7 +88,7 @@
 @font-face {
   font-family: "c64-pro-mono";
   src: url("../fonts/C64_Pro_Mono-STYLE.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-c64-pro-mono {
   font-family: c64-pro-mono;
@@ -98,7 +98,7 @@
 @font-face {
   font-family: "c64-pro";
   src: url("../fonts/C64_Pro-STYLE.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-c64-pro {
   font-family: c64-pro;
@@ -108,7 +108,7 @@
 @font-face {
   font-family: "petme";
   src: url("../fonts/PetMe.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-petme {
   font-family: petme;
@@ -118,7 +118,7 @@
 @font-face {
   font-family: "petme64";
   src: url("../fonts/PetMe64.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-petme64 {
   font-family: petme64;
@@ -128,7 +128,7 @@
 @font-face {
   font-family: "petme128";
   src: url("../fonts/PetMe128.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-petme128 {
   font-family: petme128;
@@ -138,7 +138,7 @@
 @font-face {
   font-family: "petme642y";
   src: url("../fonts/PetMe642Y.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-petme642y {
   font-family: petme642y;
@@ -148,7 +148,7 @@
 @font-face {
   font-family: "petme1282y";
   src: url("../fonts/PetMe1282Y.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-petme1282y {
   font-family: petme1282y;
@@ -159,7 +159,7 @@
 @font-face {
   font-family: "atarist";
   src: url("../fonts/AtariST8x16SystemFont.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-atarist {
   font-family: atarist;
@@ -169,7 +169,7 @@
 @font-face {
   font-family: "atarist2min";
   src: url("../fonts/TwoMinutestoBoot.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-atarist2min {
   font-family: atarist2min;
@@ -179,7 +179,7 @@
 @font-face {
   font-family: "atascii";
   src: url("../fonts/AtariClassicChunky.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-atascii {
   font-family: atascii;
@@ -189,7 +189,7 @@
 @font-face {
   font-family: "candyantics";
   src: url("../fonts/CandyAntics.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-candyantics {
   font-family: candyantics;
@@ -199,7 +199,7 @@
 @font-face {
   font-family: "colleenantics";
   src: url("../fonts/ColleenAntics.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-colleenantics {
   font-family: colleenantics;
@@ -211,7 +211,7 @@
 @font-face {
   font-family: "pr_number_3";
   src: url("../fonts/PRNumber3.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-pr_number_3 {
   font-family: pr_number_3;
@@ -221,7 +221,7 @@
 @font-face {
   font-family: "print_character_21";
   src: url("../fonts/PrintChar21.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-print_character_21 {
   font-family: print_character_21;
@@ -232,7 +232,7 @@
 @font-face {
   font-family: "berkeliumiidhr";
   src: url("../fonts/berkeliumiidhr-webfont.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-berkeliumiidhr {
   font-family: berkeliumiidhr;
@@ -242,7 +242,7 @@
 @font-face {
   font-family: "berkeliumiihgr";
   src: url("../fonts/berkeliumiihgr-webfont.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-berkeliumiihgr {
   font-family: berkeliumiihgr;
@@ -253,7 +253,7 @@
 @font-face {
   font-family: "lisatwiggy";
   src: url("../fonts/TwiggyRaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-lisatwiggy {
   font-family: lisatwiggy;
@@ -263,7 +263,7 @@
 @font-face {
   font-family: "lisastartup";
   src: url("../fonts/StartupFromRaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-lisastartup {
   font-family: lisastartup;
@@ -273,7 +273,7 @@
 @font-face {
   font-family: "lisaacronym";
   src: url("../fonts/SomeAcronymRaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-lisaacronym {
   font-family: lisaacronym;
@@ -283,7 +283,7 @@
 @font-face {
   font-family: "lisapaper";
   src: url("../fonts/LisaTerminalPaperRaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-lisapaper {
   font-family: lisapaper;
@@ -293,7 +293,7 @@
 @font-face {
   font-family: "lisapapersmall";
   src: url("../fonts/LisaTerminalPaperSmallRaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-lisapapersmall {
   font-family: lisapapersmall;
@@ -304,7 +304,7 @@
 @font-face {
   font-family: "shaston320";
   src: url("../fonts/shaston320-webfont.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-shaston320 {
   font-family: shaston320;
@@ -314,7 +314,7 @@
 @font-face {
   font-family: "shaston640";
   src: url("../fonts/shaston640-webfont.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-shaston640 {
   font-family: shaston640;
@@ -324,7 +324,7 @@
 @font-face {
   font-family: "shastonhi320";
   src: url("../fonts/shastonhi320-webfont.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-shastonhi320 {
   font-family: shastonhi320;
@@ -334,7 +334,7 @@
 @font-face {
   font-family: "shastonhi640";
   src: url("../fonts/shastonhi640-webfont.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-shastonhi640 {
   font-family: shastonhi640;
@@ -345,7 +345,7 @@
 @font-face {
   font-family: "applemac";
   src: url("../fonts/SteveSez.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-applemac {
   font-family: applemac;
@@ -356,7 +356,7 @@
 @font-face {
   font-family: "miaraw";
   src: url("../fonts/AnotherMansTreasureMIARaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-miaraw {
   font-family: miaraw;
@@ -366,7 +366,7 @@
 @font-face {
   font-family: "miiiraw";
   src: url("../fonts/AnotherMansTreasureMIII32C.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-miiiraw {
   font-family: miiiraw;
@@ -376,7 +376,7 @@
 @font-face {
   font-family: "m4araw";
   src: url("../fonts/AnotherMansTreasureM4ARaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-m4araw {
   font-family: m4araw;
@@ -386,7 +386,7 @@
 @font-face {
   font-family: "m4braw";
   src: url("../fonts/AnotherMansTreasureM4BRaw.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-m4braw {
   font-family: m4braw;
@@ -397,7 +397,7 @@
 @font-face {
   font-family: "gameboy";
   src: url("../fonts/ItalianPlumber.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-gameboy {
   font-family: gameboy;
@@ -408,7 +408,7 @@
 @font-face {
   font-family: "antiquarius";
   src: url("../fonts/Antiquarius.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-antiquarius {
   font-family: antiquarius;
@@ -419,7 +419,7 @@
 @font-face {
   font-family: "sharpmz";
   src: url("../fonts/Mizuno.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-sharpmz {
   font-family: sharpmz;
@@ -430,7 +430,7 @@
 @font-face {
   font-family: "hotcoco";
   src: url("../fonts/HotCoCo.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-hotcoco {
   font-family: hotcoco;
@@ -440,7 +440,7 @@
 @font-face {
   font-family: "hotcoco2y";
   src: url("../fonts/HotCoCo2Y.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-hotcoco2y {
   font-family: hotcoco2y;
@@ -450,7 +450,7 @@
 @font-face {
   font-family: "hotcocowitht";
   src: url("../fonts/HotCoCoWithT.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-hotcocowitht {
   font-family: hotcocowitht;
@@ -460,7 +460,7 @@
 @font-face {
   font-family: "hotcocowitht2y";
   src: url("../fonts/HotCoCoWithT2Y.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-hotcocowitht2y {
   font-family: hotcocowitht2y;
@@ -471,7 +471,7 @@
 @font-face {
   font-family: "zxspectrum";
   src: url("../fonts/Speccy.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-zxspectrum {
   font-family: zxspectrum;
@@ -483,7 +483,7 @@
 @font-face {
   font-family: "ibm3270";
   src: url("../fonts/3270-Regular.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-ibm3270 {
   font-family: ibm3270;
@@ -493,7 +493,7 @@
 @font-face {
   font-family: "ibm3270Condensed";
   src: url("../fonts/3270Condensed-Regular.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-ibm3270Condensed {
   font-family: ibm3270Condensed;
@@ -503,7 +503,7 @@
 @font-face {
   font-family: "ibm3270SemiCondensed";
   src: url("../fonts/3270SemiCondensed-Regular.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-ibm3270SemiCondensed {
   font-family: ibm3270SemiCondensed;
@@ -515,7 +515,7 @@
 @font-face {
   font-family: "alto";
   src: url("../fonts/AltoSerif.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-alto {
   font-family: alto;
@@ -525,7 +525,7 @@
 @font-face {
   font-family: "altolegacy";
   src: url("../fonts/AltoSerifLegacy.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-altolegacy {
   font-family: altolegacy;
