--- a/ext/css/retrotxt.css
+++ b/ext/css/retrotxt.css
@@ -26,7 +26,7 @@
 @font-face {
   font-family: "mona";
   src: url("../fonts/mona.woff2") format("woff2");
-  font-display: swap;
+  font-display: auto;
 }
 .font-mona {
   font-family: mona;
