Renamed Options link to Settings. Fixed the more Options link to work within the new MV3 restrictions.

--- a/ext/css/layout.css
+++ b/ext/css/layout.css
@@ -124,7 +124,8 @@ header {
   top: 0em;
 }
 
-header strong {
+header strong,
+header #moreSettings {
   cursor: default;
   user-select: none;
 }
@@ -151,7 +152,7 @@ header #fontnameInUse {
 header strong#colorPaletteToggle,
 header strong#renderToggle,
 header strong#sizeToggle,
-header a#moreSettings {
+header #moreSettings {
   color: var(--has-text-info);
 }
 
